# cl-aoc2024

./: Cargo.toml  README.md  justfile
aoc-benchmarking/: Cargo.toml
aoc-benchmarking/benches/: bench_main.rs
aoc-cli/: Cargo.toml
aoc-cli/src/: cli.rs  fast.rs  main.rs
day-001-historian-hysteria/: Cargo.toml
day-001-historian-hysteria/src/: lib.rs
day-002-red-nosed-reports/: Cargo.toml  README.md
day-002-red-nosed-reports/src/: lib.rs
day-003-mull-it-over/: Cargo.toml  README.md
day-003-mull-it-over/src/: lib.rs
day-004-ceres-search/: Cargo.toml  README.md
day-004-ceres-search/src/: lib.rs
day-005-print-queue/: Cargo.toml  README.md
day-005-print-queue/src/: lib.rs
day-006-guard-gallivant/: Cargo.toml  README.md
day-006-guard-gallivant/src/: lib.rs
day-007-bridge-repair/: Cargo.toml
day-007-bridge-repair/src/: lib.rs
day-008-resonant-collinearity/: Cargo.toml  README.md
day-008-resonant-collinearity/src/: lib.rs
day-009-disk-fragmenter/: Cargo.toml  README.md
day-009-disk-fragmenter/src/: lib.rs
day-010-hoof-it/: Cargo.toml  README.md
day-010-hoof-it/src/: lib.rs
day-011-plutonium-pebbles/: Cargo.toml  README.md
day-011-plutonium-pebbles/src/: lib.rs
day-012-garden-groups/: Cargo.toml
day-012-garden-groups/src/: lib.rs
day-013-claw-contraption/: Cargo.toml  README.md
day-013-claw-contraption/src/: lib.rs
day-014-restroom-redoubt/: Cargo.toml  README.md
day-014-restroom-redoubt/src/: lib.rs
day-015-warehouse-woes/: Cargo.toml  README.md
day-015-warehouse-woes/src/: lib.rs
day-016-reindeer-maze/: Cargo.toml
day-016-reindeer-maze/src/: lib.rs
day-017-chronospatial-computer/: Cargo.toml  README.md
day-017-chronospatial-computer/src/: lib.rs
day-018-ram-run/: Cargo.toml  README.md
day-018-ram-run/src/: lib.rs
day-019-linen-layout/: Cargo.toml  README.md
day-019-linen-layout/src/: lib.rs
day-020-race-condition/: Cargo.toml  README.md
day-020-race-condition/src/: lib.rs
day-021-keypad-conundrum/: Cargo.toml  README.md
day-021-keypad-conundrum/src/: lib.rs
day-022-monkey-market/: Cargo.toml  README.md
day-022-monkey-market/src/: lib.rs
day-023-lan-party/: Cargo.toml  README.md
day-023-lan-party/src/: lib.rs
day-024-crossed-wires/: Cargo.toml  README.md
day-024-crossed-wires/src/: lib.rs
day-025-code-chronicle/: Cargo.toml  README.md
day-025-code-chronicle/src/: lib.rs
scripts/: new.sh
