[package]
name = "red-nosed-reports"
version = "0.1.0"
edition = "2021"
description = "red nosed reports"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
anyhow = { workspace = true }
# itertools = { workspace = true }
nom = { workspace = true }
# rayon = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
